# kuiper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  check_version_numbers.py  kuiper.sln  package-lock.json  package.json  renovate.json  rust-toolchain.toml
.github/workflows/: build-and-test.yml  common.yml  release.yml
KuiperNet/: Kuiper.cs  KuiperNet.csproj  KuiperWrapper.cs  Program.cs  README.md
KuiperNet.Test/: KuiperNet.Test.csproj  Test.cs
amqp_streaming/: Cargo.toml
amqp_streaming/src/: main.rs
extension-dev/: test.kp
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_single_input.rs  fuzz_tokens.rs
go-kuiper/: README.md  go.mod  main.go
go-kuiper/kuiper/: kuiper.go  kuiper_test.go
go-kuiper/lib/darwin-arm64/: libkuiper_interop.dylib
go-kuiper/templates/: index.html
kuiper-vscode/: README.md  language-configuration.json  package.json  tsconfig.json  vsc-extension-quickstart.md
kuiper-vscode/src/: extension.ts
kuiper-vscode/syntaxes/: kuiper.tmLanguage.json
kuiper_cli/: Cargo.toml  README.md  test.json
kuiper_cli/src/: builtins.rs  errors.rs  lib.rs  main.rs  repl.rs
kuiper_cli/src/repl/: cmd_helper.rs  io.rs  macros.rs  magic.rs  mod.rs
kuiper_documentation/: README.md  built_in_functions.md  codegen.py  functions.yaml
kuiper_frontend_test/: build.mjs  package.json  tsconfig.json
kuiper_frontend_test/src/: app.tsx
kuiper_frontend_test/www/: index.html
kuiper_interop/: Cargo.toml  README.md  kuiper.h
kuiper_interop/src/: lib.rs
kuiper_interop/test/: .gitignore  compile_and_run.sh  test_kuiper_interop.c
kuiper_java/: README.md  pom.xml
kuiper_java/rust/: Cargo.toml
kuiper_java/rust/src/: lib.rs
kuiper_java/src/main/java/com/cognite/kuiper/: Kuiper.java  KuiperException.java  KuiperExpression.java
kuiper_java/src/test/java/com/cognite/kuiper/: KuiperTest.java
kuiper_js/: Cargo.toml  README.md
kuiper_js/src/: lib.rs
kuiper_js_test/: package.json  tsconfig.json
kuiper_js_test/test/: test.ts
kuiper_lang/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
kuiper_lang/benches/: bench_execute.rs  perf.rs
kuiper_lang/src/: jsontf.lalrpop  kuiper.lalrpop  lib.rs
kuiper_lang/src/compiler/: exec_tree.rs  mod.rs  optimizer.rs
kuiper_lang/src/expressions/: array.rs  base.rs  defines.rs  if_expr.rs  is_operator.rs  lambda.rs  macro_call.rs  mod.rs  numbers.rs  object.rs  operator.rs  result.rs  run_builder.rs  selector.rs  source.rs  template_string.rs  transform_error.rs  types.rs
kuiper_lang/src/expressions/functions/: arrays.rs  coalesce.rs  conversions.rs  digest.rs  docs.rs  dynamic.rs  join.rs  json.rs  logic.rs  macros.rs  math.rs  mod.rs  regex.rs  string.rs  time.rs  transforms.rs  uuid.rs
kuiper_lang/src/expressions/functions/functors/: distinct_by.rs  except.rs  filter.rs  flatmap.rs  if_value.rs  join.rs  join_object.rs  map.rs  mod.rs  objects.rs  reduce.rs  select.rs  zip.rs
kuiper_lang/src/lexer/: mod.rs  token.rs
kuiper_lang/src/parse/: ast.rs  mod.rs  parser.rs
kuiper_lang/src/pretty/: formatter.rs  mod.rs  utils.rs
kuiper_lang/src/program/: compile_err.rs  run.rs
kuiper_lang/src/types/: array.rs  mod.rs  object.rs
kuiper_lang/test_files/: input_map.kp  max.kp  simple_math.kp
kuiper_lang_macros/: Cargo.toml  README.md
kuiper_lang_macros/src/: lib.rs
kuiper_lang_no_std_test/: Cargo.toml  build_and_run.sh
kuiper_lang_no_std_test/src/: main.rs
kuiper_lezer/: README.md  package.json  rollup.config.js  tsconfig.json
kuiper_lezer/src/: builtins.ts  complete.ts  hover.ts  index.ts  kuiper.grammar  tokens.js
kuiper_lezer/test/: arrays.txt  basic.txt  functions.txt  macros.txt  objects.txt  operators.txt  selectors.txt  test.js
kuiper_lsp/: Cargo.toml
kuiper_lsp/src/: main.rs
kuiper_net/: Cargo.toml
kuiper_net/src/: lib.rs
kuiper_net_bindings/: Cargo.toml
kuiper_net_bindings/bindings/csharp/: Kuiper.cs
kuiper_net_bindings/src/: main.rs
kuiper_python/: Cargo.toml  README.md  enter.sh  pyproject.toml
kuiper_python/kuiper/: __init__.py  kuiper.pyi
kuiper_python/python/kuiper/: kuiper.pyi
kuiper_python/src/: compiler.rs  exceptions.rs  expressions.rs  lib.rs  python_json.rs
kuiper_python/src/kuiper/: __init__.py  _core.pyi
kuiper_python/tests/: test_bindings.py
mqtt_streaming/: Cargo.toml
mqtt_streaming/src/: main.rs
playground/: Cargo.toml
playground/src/: main.rs
src/: main.rs
src/expressions/: base.rs  function.rs  mod.rs  operator.rs  selector.rs  transform_error.rs
src/lexer/: token.rs
src/parser/: mod.rs  parse_error.rs  parser.rs
transform/: Cargo.toml
transform-cli/: Cargo.toml
transform-cli/src/: main.rs
transform/benches/: bench_execute.rs  perf.rs
transform/src/: jsontf.lalrpop  lib.rs  main.rs
transform/src/compiler/: exec_tree.rs  mod.rs  optimizer.rs
transform/src/expressions/: array.rs  base.rs  function.rs  index.rs  lambda.rs  mod.rs  numbers.rs  object.rs  operator.rs  optimizer.rs  selector.rs  transform_error.rs
transform/src/expressions/functions/: arrays.rs  functors.rs  logic.rs  macros.rs  math.rs  mod.rs  string.rs  time.rs  transforms.rs
transform/src/expressions/functions/functors/: filter.rs  map.rs  mod.rs  zip.rs
transform/src/lexer/: mod.rs  token.rs
transform/src/parse/: ast.rs  mod.rs  parse_error.rs  parser.rs  parser2.rs
transform/src/program/: compile_err.rs  input.rs  mod.rs  run.rs
transform_macros/: Cargo.toml
transform_macros/src/: lib.rs
