[workspace]
members = [
    "kuiper_lang",
    "kuiper_lang_macros",
    "kuiper_cli",
    "kuiper_python",
    "kuiper_interop",
    "kuiper_js",
    "kuiper_java/rust",
    "fuzz",
    "kuiper_lsp"
]
resolver = "2"

[workspace.dependencies]
regex = "1.10.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.116"
