[workspace]
members = [
    "kuiper_lang",
    "kuiper_lang_macros",
    "kuiper_cli",
    "kuiper_python",
    "kuiper_interop",
    "kuiper_js",
    "kuiper_java/rust",
    "fuzz",
]
resolver = "2"
exclude = ["kuiper_lang_no_std_test"]

[workspace.dependencies]
regex = { version = "1.10.4" }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.116", default-features = false }
