[package]
name = "kuiper-cli"
version = "9.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
kuiper_lang = { path = "../kuiper_lang" }
clap = { version = "4.5.3", features = ["derive"] }
rustyline = { version = "14.0.0", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
