[package]
name = "kuiper-cli"
version = "0.11.0"
edition = "2021"
license = "Apache-2.0"
description = "A CLI for the Kuiper JSON mapping language"
homepage = "htttps://github.com/cognitedata/kuiper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.116"
kuiper_lang = { path = "../kuiper_lang" }
clap = { version = "4.5.4", features = ["derive"] }
rustyline = { version = "14.0.0", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
