[package]
name = "kuiper_interop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.113"
kuiper_lang = { path = "../kuiper_lang" }
thiserror = "1.0.57"
