[package]
name = "kuiper_interop"
version = "0.12.1"
edition = "2021"
license = "Apache-2.0"
description = "C interop module for the Kuiper JSON mapping language"
homepage = "htttps://github.com/cognitedata/kuiper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.116"
kuiper_lang = { path = "../kuiper_lang" }
thiserror = "1.0.59"
