[package]
name = "kuiper_js"
version = "0.9.1"
edition = "2021"
authors = ["Einar Omang <einar.omang@cognite.com>"]
license = "MIT"
description = "WASM module to run programs in the json transform language Kuiper inside the browser"
repository = "https://github.com/cognitedata/kuiper"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
panic_hook = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
kuiper_lang = { path = "../kuiper_lang", features = ["completions"] }
serde_json = { version = "1.0.114" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-utils = { version = "0.2.0", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-Oz']
