[package]
name = "kuiper_lang"
version = "0.15.0"
edition = "2021"
license = "Apache-2.0"
description = "The Kuiper JSON mapping language"
homepage = "htttps://github.com/cognitedata/kuiper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
completions = []

[dependencies]
chrono = "0.4.38"
itertools = "0.14.0"
lazy_static = "1.4.0"
logos = "0.15"
once_cell = "1.19.0"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
kuiper_lang_macros = { path = "../kuiper_lang_macros" }
lalrpop-util = "0.22.0"
thiserror = "2.0.0"
sha2 = "0.10.8"
base64 = "0.22.1"

[dev-dependencies]
pprof = { version = "0.14", features = ["flamegraph"] }
criterion = "0.5"

[build-dependencies]
lalrpop = "0.22.0"

[[bench]]
name = "bench_execute"
harness = false
