[package]
name = "kuiper_lang"
version = "0.18.1"
edition = "2021"
license = "Apache-2.0"
description = "The Kuiper JSON mapping language"
homepage = "https://github.com/cognitedata/kuiper"
repository = "https://github.com/cognitedata/kuiper"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["kuiper", "json", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
completions = []

[dependencies]
chrono = "0.4.38"
itertools = "0.14.0"
lazy_static = "1.4.0"
logos = "0.16"
once_cell = "1.19.0"
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
lalrpop-util = "0.22.0"
thiserror = "2.0.0"
sha2 = "0.10.8"
base64 = "0.22.1"

[dependencies.kuiper_lang_macros]
version = "0.18.1"
path = "../kuiper_lang_macros"

[dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph"] }
criterion = "0.8"
walkdir = "2.5.0"

[build-dependencies]
lalrpop = "0.22.0"

[[bench]]
name = "bench_execute"
harness = false

[package.metadata.docs.rs]
all-features = true
