[package]
name = "kuiper_lang"
version = "0.18.2"
edition = "2021"
license = "Apache-2.0"
description = "The Kuiper JSON mapping language"
homepage = "https://github.com/cognitedata/kuiper"
repository = "https://github.com/cognitedata/kuiper"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["kuiper", "json", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
completions = []
std = ["serde_json/std", "lalrpop-util/std", "logos/std", "base64/std", "chrono/std", "chrono/now", "rand", "itertools/use_std", "regex"]

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
logos = { version = "0.16", default-features = false, features = ["export_derive"] }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
regex = { workspace = true, optional = true }
lalrpop-util = { version = "0.22.0", default-features = false }
thiserror = { version = "2.0.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
rand = { version = "0.8", optional = true }

[dependencies.kuiper_lang_macros]
version = "0.18.2"
path = "../kuiper_lang_macros"

[dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph"] }
criterion = "0.8"
walkdir = "2.5.0"

[build-dependencies]
lalrpop = "0.22.0"

[[bench]]
name = "bench_execute"
harness = false

[package.metadata.docs.rs]
all-features = true
