[package]
name = "kuiper_lang_macros"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.60", features=["full", "derive", "parsing", "printing", "clone-impls", "proc-macro"] }
quote = { version = "1.0.36" }
proc-macro2 = { version = "1.0.81" }
