[package]
name = "kuiper_lang_macros"
version = "0.18.1"
edition = "2021"
license = "Apache-2.0"
description = "Proc-macro library for the Kuiper JSON mapping language"
homepage = "https://github.com/cognitedata/kuiper"
repository = "https://github.com/cognitedata/kuiper"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.60", features=["full", "derive", "parsing", "printing", "clone-impls", "proc-macro"] }
quote = { version = "1.0.36" }
proc-macro2 = { version = "1.0.81" }
