[package]
name = "kuiper_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
interoptopus = "0.14.18"
serde_json = "1.0.96"
kuiper_lang = { path = "../kuiper_lang" }
