[package]
name = "kuiper_python"
version = "0.6.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/mod`.
name = "kuiper"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
kuiper_lang = { path = "../kuiper_lang" }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde_json = { version = "1.0.109" }
