[package]
name = "kuiper_python"
version = "0.18.2"
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
kuiper_lang = { path = "../kuiper_lang" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
serde_json = { workspace = true }
