[project]
name = "cognite-kuiper"
version = "0.6.1"
description = "A JSON to JSON transform and templating language from Cognite"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["JSON", "transformation"]
authors = [
  {name = "Mathias Lohne", email = "mathias.lohne@cognite.com"}
]
maintainers = [
  {name = "Mathias Lohne", email = "mathias.lohne@cognite.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Rust",
  "Programming Language :: Python"
]

dependencies = [
]

[project.optional-dependencies]
test = [
  "pytest >=8,<9",
]

[package.metadata.maturin]
python-source = "python"

[project.urls]
homepage = "https://cognite.com"
repository = "https://github.com/cognitedata/kuiper"

[tool.ruff.per-file-ignores]
"python/kuiper/__init__.py" = ["F403"]

[tool.ruff]
select = ["E", "F", "I", "T20", "S"]
ignore = ["S104"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
