[package]
name = "mqtt_streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_json = "1.0.91"
json_transform = { path = "../transform" }
cognite = { git = "https://github.com/cognitedata/cognite-sdk-rust", rev = "412bdc6b864f962904298f96861e793638a6d40d" }
tokio = { version = "1.24.1", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
rumqttc = "0.20.0"
