[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cognite = { git = "https://github.com/cognitedata/cognite-sdk-rust", rev = "c6c0ba3a31f9a717bf4dd057988f880e26dffb49" }
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.23.1", features = ["full"] }
futures = "0.3.25"
json_transform = { path = "../transform" }
