[package]
name = "json_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
lazy_static = "1.4.0"
logos = "0.12.1"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
transform_macros = { path = "../transform_macros" }

[dev-dependencies]
pprof = { version = "0.3", features = ["flamegraph"] }
criterion = "0.3"

[[bench]]
name = "bench_execute"
harness = false
