[package]
name = "json_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
itertools = "0.10.5"
lazy_static = "1.4.0"
logos = "0.13"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
transform_macros = { path = "../transform_macros" }
lalrpop-util = "0.20.0"
thiserror = "1.0.40"

[dev-dependencies]
pprof = { version = "0.3", features = ["flamegraph"] }
criterion = "0.3"

[build-dependencies]
lalrpop = "0.20.0"

[[bench]]
name = "bench_execute"
harness = false
