[package]
name = "transform_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0.91", features=["full", "derive", "parsing", "printing", "clone-impls", "proc-macro"] }
quote = { version = "1.0.0" }
proc-macro2 = { version = "1.0.37" }
